tests/valid/definite/BoolTuple_Valid_1.whiley
define (bool flag, int code) as btr1tup

void System::main([string] args):
    btr1tup x = (flag:true,code:0)
    print str(x)
    x.flag = false
    print str(x)
