tests/invalid/simple/VarDecl_CompileFail_6.whiley
void System::main([string] args):
    int y
    int x = y
    print str(x)
